--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ carpentry: 'incubator'
 title: 'Intermediate Research Software Development'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: 
+created: 2020-04-23 
 
 # Comma-separated list of keywords for the lesson
 keywords: 'software, data, lesson, The Carpentries'
@@ -111,6 +111,3 @@ profiles:
 
 
 carpentry_description: Lesson Description
-url: 'https://carpentries-incubator.github.io/python-intermediate-development-earth-sciences'
-analytics: carpentries
-lang: en
